Fixed scrollbars showing up randomly
Score messages appearing at the borders led to this problem, so, overflow on the body was set to hidden.

--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ body {
   background-color: var(--color-body-bg);
   color: var(--color-body-text);
   font-family: 'Press Start 2P', sans-serif;
+  overflow: hidden;
 }
 
 @keyframes blink {
